--- a/templates/components/home.html
+++ b/templates/components/home.html
@@ -613,18 +613,37 @@
                 </div>
             </div>
 
-            <div class="flex justify-center items-center mt-6">
-                <div class="group relative w-full bg-gray-100 dark:bg-gray-800 rounded-2xl p-4 transition-all duration-500 max-md:max-w-md max-md:mx-auto hover:bg-red-600 dark:hover:bg-red-700">
-                    <div class="bg-white dark:bg-gray-700 rounded-full flex justify-center items-center mb-5 w-14 h-14">
-                        <i class="ri-shield-user-fill text-2xl text-red-500 dark:text-red-400"></i>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+                <!-- Módulo de Usuarios -->
+                <div class="flex justify-center items-center mt-6">
+                    <div class="group relative w-full bg-gray-100 dark:bg-gray-800 rounded-2xl p-4 transition-all duration-500 max-md:max-w-md max-md:mx-auto hover:bg-red-600 dark:hover:bg-red-700">
+                        <div class="bg-white dark:bg-gray-700 rounded-full flex justify-center items-center mb-5 w-14 h-14">
+                            <i class="ri-shield-user-fill text-2xl text-red-500 dark:text-red-400"></i>
+                        </div>
+                        <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-3 capitalize transition-all duration-500 group-hover:text-white">{% trans 'Usuarios' %}</h4>
+                        <p class="text-sm font-normal text-gray-500 dark:text-gray-400 transition-all duration-500 leading-5 group-hover:text-white">
+                            {% trans 'Gestiona los usuarios de tu sistema.' %}
+                        </p>
+                        <a href="{% url 'security:user_list' %}" class="mt-4 inline-flex items-center justify-center px-5 py-2 text-sm font-medium text-white bg-red-500 rounded-lg hover:bg-red-600 focus:ring-4 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
+                            {% trans 'Empezar' %}
+                        </a>
                     </div>
-                    <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-3 capitalize transition-all duration-500 group-hover:text-white">{% trans 'Usuarios' %}</h4>
-                    <p class="text-sm font-normal text-gray-500 dark:text-gray-400 transition-all duration-500 leading-5 group-hover:text-white">
-                        {% trans 'Gestiona los usuarios de tu sistema.' %}
-                    </p>
-                    <a href="{% url 'security:user_list' %}" class="mt-4 inline-flex items-center justify-center px-5 py-2 text-sm font-medium text-white bg-red-500 rounded-lg hover:bg-red-600 focus:ring-4 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
-                        {% trans 'Empezar' %}
-                    </a>
+                </div>
+
+                <!-- Módulo de Incremento de precios -->
+                <div class="flex justify-center items-center mt-6">
+                    <div class="group relative w-full bg-gray-100 dark:bg-gray-800 rounded-2xl p-4 transition-all duration-500 max-md:max-w-md max-md:mx-auto hover:bg-red-600 dark:hover:bg-red-700">
+                        <div class="bg-white dark:bg-gray-700 rounded-full flex justify-center items-center mb-5 w-14 h-14">
+                            <i class="ri-shield-user-fill text-2xl text-red-500 dark:text-red-400"></i>
+                        </div>
+                        <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-3 capitalize transition-all duration-500 group-hover:text-white">{% trans 'Incremento de precios' %}</h4>
+                        <p class="text-sm font-normal text-gray-500 dark:text-gray-400 transition-all duration-500 leading-5 group-hover:text-white">
+                            {% trans 'Gestiona el incremento de precios de tus productos.' %}
+                        </p>
+                        <a href="{% url 'core:product_price_list' %}" class="mt-4 inline-flex items-center justify-center px-5 py-2 text-sm font-medium text-white bg-red-500 rounded-lg hover:bg-red-600 focus:ring-4 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
+                            {% trans 'Empezar' %}
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
