--- a/templates/core/product_price_details/form.html
+++ b/templates/core/product_price_details/form.html
@@ -66,7 +66,7 @@
                             <i class="fa-solid fa-save mr-2"></i>Guardar
                         </button>
                         <a class="bg-red-700 hover:bg-red-800 text-white py-2 px-4 rounded-full flex items-center"
-                            href="{% url 'core:product_price_list' %}">
+                            href="{% url 'core:product_price_detail_list' %}">
                             <i class="fa-solid fa-xmark mr-2"></i>Cancelar
                         </a>
                     </div>
