--- a/templates/core/product_price_details/list.html
+++ b/templates/core/product_price_details/list.html
@@ -42,8 +42,9 @@
                             <th scope="col" class="px-6 py-3">Precio de Producto</th>
                             <th scope="col" class="px-6 py-3">Producto</th>
                             <th scope="col" class="px-6 py-3">Incremento</th>
-                            <th scope="col" class="px-6 py-3">Vallor Anterior</th>
-                            <th scope="col" class="px-6 py-3">Fecha de Asunto</th>
+                            <th scope="col" class="px-6 py-3">Precio Anterior</th>
+                            <th scope="col" class="px-6 py-3">Nuevo Precio</th>
+                            <th scope="col" class="px-6 py-3">Fecha de Emisión</th>
                             <th scope="col" class="px-6 py-3">Observaciones</th>
                             <th scope="col" class="px-6 py-3">Estado</th>
                             <th scope="col" class="px-6 py-3">Acciones</th>
@@ -54,12 +55,13 @@
                         <tr
                             class="dark:text-gray-400 bg-white border-b dark:bg-[#0b1121] dark:border-secundario hover:bg-gray-50 dark:hover:bg-[#121c33]">
                             <td class="px-6 py-4">{{ item.id }}</td>
-                            <td class="px-6 py-4">{{ item.productpreci }}</td>
-                            <td class="px-6 py-4">{{ item.product }}</td>
+                            <td class="px-6 py-4">{{ item.productpreci.value }}</td>
+                            <td class="px-6 py-4">{{ item.product.name }}</td>
                             <td class="px-6 py-4">{{ item.increment }}</td>
                             <td class="px-6 py-4">{{ item.old_price }}</td>
+                            <td class="px-6 py-4">{{ item.new_price }}</td>
                             <td class="px-6 py-4">{{ item.issue_date | date:"d/m/Y" }}</td>
-                            <td class="px-6 py-4">{{ item.observaciones }}</td>
+                            <td class="px-6 py-4">{{ item.observation }}</td>
                             <td class="px-6 py-4">
                                 {% if item.active %}
                                 <i class="fa-solid fa-check text-green-500"></i>
@@ -69,13 +71,13 @@
                             </td>
                             
                             <td class="px-6 py-4">
-                                {% if permissions.change_product_price_detail %}
+                                {% if perms.core.change_product_price_detail %}
                                 <a href="{% url 'core:product_price_detail_update' item.id %}"
                                     class="text-blue-600 dark:text-blue-500">
                                     <i class="fa-solid fa-gear"></i>
                                 </a>
                                 {% endif %}
-                                {% if permissions.delete_product_price_detail %}
+                                {% if perms.core.delete_product_price_detail %}
                                 <a href="#" class="text-red-600 dark:text-red-500"
                                     onclick="openDeleteModal('{{ item.id }}')">
                                     <i class="fa-solid fa-trash"></i>
@@ -89,18 +91,19 @@
             </div>
 
             <!-- Paginación -->
+            {% if is_paginated %}
             <div class="flex justify-center mt-4">
                 <nav aria-label="Page navigation example">
                     <ul class="inline-flex -space-x-px">
                         {% if page_obj.has_previous %}
                         <li>
-                            <a href="?page=1"
+                            <a href="?page=1{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
                                 class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-[#0b1121] dark:border-secundario dark:text-gray-400 dark:hover:bg-[#121c33] dark:hover:text-white">Anterior</a>
                         </li>
                         {% endif %}
                         {% for num in page_obj.paginator.page_range %}
                         <li>
-                            <a href="?page={{ num }}"
+                            <a href="?page={{ num }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
                                 class="flex items-center justify-center px-3 h-8 leading-tight {% if num == page_obj.number %}text-blue-600 bg-blue-50 border border-gray-300 hover:bg-blue-100 hover:text-blue-700 dark:bg-secundario dark:border-principal dark:text-blue-300{% else %}text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-[#0b1121] dark:border-secundario dark:text-gray-400 dark:hover:bg-[#121c33] dark:hover:text-white{% endif %}">
                                 {{ num }}
                             </a>
@@ -108,24 +111,26 @@
                         {% endfor %}
                         {% if page_obj.has_next %}
                         <li>
-                            <a href="?page={{ page_obj.next_page_number }}"
+                            <a href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
                                 class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-[#0b1121] dark:border-secundario dark:text-gray-400 dark:hover:bg-[#121c33] dark:hover:text-white">Siguiente</a>
                         </li>
                         {% endif %}
                     </ul>
                 </nav>
             </div>
+            {% endif %}
 
             <!-- Enlaces adicionales -->
-            <div class="flex flex-col md:flex-row justify-center form-group text-center p-4">
-                {% if permissions.add_product_price_detail %}
-                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center justify-center"
-                    href="{% url 'core:product_price_detail_create' %}">
+            <div class="flex flex-col md:flex-row justify-center form-group text-center p-4 space-x-2">
+                {% if perms.core.add_product_price_detail %}
+                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 mb-2 md:mb-0 flex items-center justify-center" href="{{ create_url }}">
                     <i class="fa-solid fa-plus mr-2"></i> Nuevo Detalle de Precio de Producto
                 </a>
                 {% endif %}
-                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center"
-                    href="{% url 'home' %}">
+                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center" href="{% url 'modulos' %}">
+                    <i class="fa-solid fa-briefcase"></i>
+                </a>
+                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center" href="{% url 'home' %}">
                     <i class="fa-solid fa-house"></i>
                 </a>
             </div>
@@ -137,7 +142,7 @@
 <script>
     function openDeleteModal(id) {
         const deleteForm = document.getElementById('deleteForm');
-        deleteForm.action = `{% url 'core:product_delete' 0 %}`.replace('0', id);
+        deleteForm.action = `{% url 'core:product_price_detail_delete' 0 %}`.replace('0', id);
         document.getElementById('Description').textContent = `ID: ${id}`;
         document.getElementById('deleteModal').classList.remove('hidden');
     }
