--- a/templates/core/product_prices/list.html
+++ b/templates/core/product_prices/list.html
@@ -68,18 +68,16 @@
                                 {% endif %}
                             </td>
                             <td class="px-6 py-4">
-                                {% if permissions.change_product_price %}
-                                <a href="{% url 'core:product_price_update' item.id %}"
-                                    class="text-blue-600 dark:text-blue-500">
+                                {% comment %} {% if permissions.change_product_price %} {% endcomment %}
+                                <a href="{% url 'core:product_price_update' item.id %}" class="text-blue-600 dark:text-blue-500">
                                     <i class="fa-solid fa-gear"></i>
                                 </a>
-                                {% endif %}
-                                {% if permissions.delete_product_price %}
-                                <a href="#" class="text-red-600 dark:text-red-500"
-                                    onclick="openDeleteModal('{{ item.id }}')">
+                                {% comment %} {% endif %} {% endcomment %}
+                                {% comment %} {% if permissions.delete_product_price %} {% endcomment %}
+                                <a href="#" class="text-red-600 dark:text-red-500" onclick="openDeleteModal('{{ item.id }}')">
                                     <i class="fa-solid fa-trash"></i>
                                 </a>
-                                {% endif %}
+                                {% comment %} {% endif %} {% endcomment %}
                             </td>
                         </tr>
                         {% endfor %}
@@ -116,15 +114,16 @@
             </div>
 
             <!-- Enlaces adicionales -->
-            <div class="flex flex-col md:flex-row justify-center form-group text-center p-4">
-                {% if permissions.add_product_price %}
-                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center justify-center"
-                    href="{% url 'core:product_price_create' %}">
+            <div class="flex flex-col md:flex-row justify-center form-group text-center p-4 space-x-2">
+                {% if permissions.add_product %}
+                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 mb-2 md:mb-0 flex items-center justify-center" href="{% url 'core:product_price_create' %}">
                     <i class="fa-solid fa-plus mr-2"></i> Nuevo Precio de Producto
                 </a>
                 {% endif %}
-                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center"
-                    href="{% url 'home' %}">
+                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center" href="{% url 'modulos' %}">
+                    <i class="fa-solid fa-briefcase"></i>
+                </a>
+                <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center" href="{% url 'home' %}">
                     <i class="fa-solid fa-house"></i>
                 </a>
             </div>
